# full-cli-rs

./: .gitignore  .travis.yml  Cargo.toml  README.md  TODO.md
config/: config.toml
src/: config.rs  constants.rs  dvm.rs  executor.rs  main.rs  server.rs
