[package]
name = "full-cli-rs"
version = "0.0.8"
authors = ["Samuel Marks <@SamuelMarks>"]
edition = "2018"

[dependencies]
docopt = "1.1.0"
env_logger = "0.7.0"
ethereum-types = "0.8.0"
failure = "0.1.6"
libcommon-rs = { git = "https://github.com/Fantom-foundation/libcommon-rs", version = "0.0.2" }
libconsensus = { git = "https://github.com/Fantom-foundation/libconsensus", version = "~0.1.0" }
libconsensus-dag = { git = "https://github.com/Fantom-foundation/libconsensus-dag", version = "0.1.0" }
libcli = { git = "https://github.com/Fantom-foundation/libcli" }
libhash-sha3 = { git = "https://github.com/Fantom-foundation/libhash-sha3", version = "0.1.1" }
libvm = { git = "https://github.com/Fantom-foundation/libvm", version = "~0.1.7" }
log = "0.4.8"
ring = "0.16.9"
serde = "1.0.101"
serde_json = "1.0.41"
serde_derive = "1.0.101"
toml = "0.5.3"
evm-rs = { git = "https://github.com/Fantom-foundation/evm-rs", version = "0.1.12" }
futures-preview = { version = "0.3.0-alpha.19", features = ["compat"] }
libsignature = { git = "https://github.com/Fantom-foundation/libsignature", version="~0.2.0" }
libsignature-ed25519-dalek = { git = "https://github.com/Fantom-foundation/libsignature-ed25519-dalek", version = "0.2.2"}
libtransport = { git = "https://github.com/Fantom-foundation/libtransport", version="~0.0.4" }
