[package]
name = "full-cli-rs"
version = "0.0.9"
authors = ["Samuel Marks <@SamuelMarks>"]
edition = "2018"

[dependencies]
env_logger = "0.7.0"
log = "0.4.8"
ethereum-types = "0.8.0"
failure = "0.1.6"
structopt = "0.3.3"
serde = "1.0.102"
serde_derive = "1.0.102"
futures-preview = { version = "0.3.0-alpha.19" }
libcommon-rs = { git = "https://github.com/Fantom-foundation/libcommon-rs", version = "0.0.2" }
libconsensus = { git = "https://github.com/Fantom-foundation/libconsensus", version = "~0.0.8" }
libconsensus-dag = { git = "https://github.com/Fantom-foundation/libconsensus-dag", version = "~0.0.19" }
libcli = { git = "https://github.com/Fantom-foundation/libcli" }
libhash-sha3 = { git = "https://github.com/Fantom-foundation/libhash-sha3", version = "~0.1.1" }
libvm = { git = "https://github.com/Fantom-foundation/libvm", version = "~0.1.8" }
evm-rs = { git = "https://github.com/Fantom-foundation/evm-rs", version = "~0.1.12" }
libsignature = { git = "https://github.com/Fantom-foundation/libsignature", version="~0.2.0" }
libsignature-ed25519-dalek = { git = "https://github.com/Fantom-foundation/libsignature-ed25519-dalek", version = "~0.2.2"}
libtransport = { git = "https://github.com/Fantom-foundation/libtransport", version="~0.0.4" }
